--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: AAarrayExmpl
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
-Encoding: UTF-8
-LazyData: true
+Title: Analysis AutoAntigen Data
+Version: 0.0.1.2
+Author: c(person("Ziqiang", "Chen", email = "ziqiangc@buffalo.edu", role = c("aut", "cre")),person("Daniel", "Gaile", email = "dpgaile@buffalo.edu", role = c("aut")))
+Maintainer: Daniel P. Gaile <dpgaile@gmail.com>
+Description: Provide visualization and analysis tools for AutoAntigen studies, especially for GenePix data.
+License: GPL (>= 2)
+LazyData: TRUE
+RoxygenNote: 5.0.1
+RoxygenNote: 5.0.1
