--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: AAarrayExmpl
 Type: Package
 Title: Analysis AutoAntigen Data
-Version: 0.0.1.2
-Author: c(person("Ziqiang", "Chen", email = "ziqiangc@buffalo.edu", role = c("aut", "cre")),person("Daniel", "Gaile", email = "dpgaile@buffalo.edu", role = c("aut")))
+Version: 0.0.1.3
+Author: c(person("Ziqiang", "Chen", email = "ziqiangc@buffalo.edu", role = c("aut", "cre")),person("Daniel", "Gaile", email = "dpgaile@buffalo.edu", role = c("aut", "cre")))
 Maintainer: Daniel P. Gaile <dpgaile@gmail.com>
 Description: Provide visualization and analysis tools for AutoAntigen studies, especially for GenePix data.
 License: GPL (>= 2)
